# remote-desktop-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/control-plane/app/: database.py  llm.py  main.py  models.py  policy.py  schemas.py  service.py  settings.py
apps/runner/agent_runner/: browser.py  client.py  config.py  evidence.py  executor.py  macos.py  main.py  planner.py
apps/telegram-bot/: bot.py
infrastructure/docker/: control-plane.Dockerfile  telegram-bot.Dockerfile
scripts/: bootstrap_mac.sh  bootstrap_windows.ps1  compose.sh  diagnose_windows.ps1  runner.env.example  sync_mac.sh  sync_windows.ps1  uninstall_windows.ps1
telegram_operator_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_bot_presentation.py  test_intake.py  test_planner.py  test_policy.py
