[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-operator-agent"
version = "1.0.0"
description = "Telegram-controlled, approval-gated remote operator for macOS and Windows"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0", "uvicorn[standard]>=0.30,<1.0", "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0", "pydantic-settings>=2.4,<3.0", "httpx>=0.27,<1.0",
  "python-telegram-bot[job-queue]>=21.6,<22.0", "python-dotenv>=1.0,<2.0", "pytest>=8.0,<9.0"
]
[tool.pytest.ini_options]
pythonpath = ["apps/control-plane", "apps/runner"]
testpaths = ["tests"]

[tool.setuptools]
packages = []
